# p2p_chat

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
front/: Cargo.toml
front/src/: event.rs  html.rs  lib.rs  p2p.rs  streams.rs  webrtc.rs  websocket.rs
lib/: Cargo.toml
lib/src/: id.rs  lib.rs  proto.rs  proto_rtc.rs  proto_ws.rs
server/: Cargo.toml
server/src/: main.rs  process.rs  websocket.rs
src/crossplatform/: id.rs  proto.rs
src/protocols/: lib.rs  webrtc.rs  websocket.rs
src/server/: main.rs  process.rs  websocket.rs
src/weblib/: Cargo.toml
src/weblib/src/: cb.rs  event.rs  html.rs  lib.rs  p2p.rs  streams.rs  webrtc.rs  websocket.rs
static/: .gitignore  app.css  index.html  index.js
