[package]
name = "p2p_chat"
version = "0.1.0"
authors = ["gmorer <gmorer@pm.me>"]
edition = "2018"

[features]
default = [
	"hyper",
	"tokio",
	"headers",
	"tokio-tungstenite",
	"futures",
	"futures-util",
	"tungstenite",
	"tokio-util",
	"rand"
]
web = []

[lib]
name= "crossplatform"
path = "src/crossplatform/lib.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"
features = ["full"]

[dependencies]
bincode = "1.2"
rand = { version = "0.7", optional = true }
serde = { version = "1.0", features = ["derive"] }
hyper = { version = "0.13.6", optional = true }
tokio = { version = "0.2", features = ["macros", "signal", "io-util", "fs"], optional = true}
headers = { version = "0.3.2", optional = true }
tokio-tungstenite = { version = "*", optional = true }
futures = { version = "0.3", optional = true }
futures-util = { version = "0.3", features = ["async-await", "sink", "std"], optional = true }
tungstenite = { version = "0.10.0", default-features = false, optional = true }
tokio-util = { version = "0.3", features = ["codec"], optional = true }