[package]
name = "server"
version = "0.1.0"
authors = ["gmorer <gmorer@pm.me>"]
edition = "2018"

[dependencies]
# bincode = "1.2"
rand = "0.7"
# serde = { version = "1.0", features = ["derive"] }
hyper = "0.14.5"
tokio = { version = "0.2", features = ["macros", "signal", "io-util", "fs"]}
headers = "0.3.2"
tokio-tungstenite =  "0.11"
futures = "0.3"
futures-util = { version = "0.3", features = ["async-await", "sink", "std"] }
tungstenite = { version = "0.11", default-features = false }
tokio-util = { version = "0.3", features = ["codec"] }
crossplatform = { path = "./../lib/" }
